# chessica

./: Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/server/: Cargo.toml  package.json
apps/server/src/: create_board.rs  game_logic.rs  handlers.rs  main.rs  state.rs
apps/web/: index.html  package.json
apps/web/src/: 404.tsx  main.tsx  new.tsx  page.tsx  play.tsx  router.tsx  routes.tsx
apps/web/src/components/: board.tsx  chess-board.tsx  chess-square.tsx  game-status.tsx
apps/web/src/components/ui/: chess-board.tsx  chess-square.tsx  game-status.tsx  radio-group.tsx
apps/web/src/hooks/: use-chess-websocket.ts  use-userid.ts
apps/web/src/lib/: board-utils.ts  favicon-switcher.ts
