[package]
name = "chessica-server"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
futures-util = "0.3.31"
serde = { version = "1.0.219", features=["derive"] }
tokio = { version = "1.45.1", features = ["full"] }
tokio-tungstenite = "0.27.0"
chessica-protocol = { path = "../../packages/protocol/" }
serde_json = "1.0.140"
uuid = { version = "1.0", features = ["v4"] }
